# AceSmartSoftFramework

./: .cproject  .gitignore  .project  CMakeLists.txt  INSTALL-ACE-6.0.2.sh  INSTALL-ACE-6.5.8.sh  README.md  generateAndPublishDocumentation.sh
APIDocu/: AceSmartSoftAPIDocu.doxyfile.in  CMakeLists.txt  DoxygenLayout.xml  footer.tex  mainpage.dox
AceSmartSoftKernel/: CMakeLists.txt  LoadSmartSoftApi.cmake  aceSmartSoft.hh  smartAdministrativeMonitor.cc  smartAdministrativeMonitor.hh  smartCmdNo.hh  smartCommParameterRequest.cc  smartCommParameterRequest.hh  smartCommParameterRequest.th  smartCommParameterRequestIdl.hh  smartCommParameterResponse.cc  smartCommParameterResponse.hh  smartCommParameterResponseIdl.hh  smartCommState.cc  smartCommState.hh  smartCommStateIdl.hh  smartCommWiring.cc  smartCommWiring.hh  smartComponent.cc  smartComponent.hh  smartCondVar.cc  smartCondVar.hh  smartEnumParamResponseType.hh  smartEnumParamResponseTypeBase.hh  smartErrno.cc  smartErrno.hh  smartEvent.hh  smartEvent.th  smartEventClientPattern.cc  smartEventClientPattern.hh  smartEventPattern.hh  smartEventServerPattern.cc  smartEventServerPattern.hh  smartIniParameter.cc  smartIniParameter.hh  smartManagedTask.cc  smartManagedTask.hh  smartMessageQueue.hh  smartMessageQueue.th  smartParameter.cc  (+31 more)
AceSmartSoftKernel/middlewareMapping/: smartConfig.hh.in  smartNSAdapterACE.cc  smartNSAdapterACE.hh  smartNSProxy.cc  smartNSProxy.hh  smartNSValueType.cc  smartNSValueType.hh  smartOSMapping.cc  smartOSMapping.hh  smartReactorTask.cc  smartReactorTask.hh  smartServiceHandler.cc  smartServiceHandler.hh  smartTask.cc  smartTask.hh  smartTimerManagerThread.cc  smartTimerManagerThread.hh
CMakeMacros/: ACEConfig.cmake  ACEConfigVersion.cmake  AceSmartSoftConfig.cmake.in  AceSmartSoftConfigVersion.cmake.in  Doxyfile.in  GenerateHashHeader.cmake.in  PackageConfigVersion.cmake.in  SmartDependsGen.cmake  SmartMacros2.cmake  SmartMacros2debian.cmake  SmartMacros2helpers.cmake  VERSION.in  (+3 more)
Examples/CommunicationObjects/: CMakeLists.txt  ExampleInterfaceClasses.vcproj  aceSerializationExamples.hh  commExampleEvent1.cc  commExampleEvent1.hh  commExampleEvent2.cc  commExampleEvent2.hh  commExamplePrint.cc  commExamplePrint.hh  commExampleResult.cc  commExampleResult.hh  commExampleTime.cc  commExampleTime.hh  commExampleTypes.cc  commExampleTypes.hh  commExampleValues.cc  commExampleValues.hh  exampleEvent1.hh  exampleEvent2.hh  examplePrint.hh  exampleResult.hh  exampleTime.hh  exampleTypes.hh  exampleValues.hh  serializeExampleEvent1.hh  serializeExampleEvent2.hh  serializeExamplePrint.hh  serializeExampleResult.hh  serializeExampleTime.hh  serializeExampleTypes.hh  serializeExampleValues.hh
Examples/Components/: CMakeLists.txt
Examples/Components/exampleComponent_01/: .cproject  .project  CMakeLists.txt  exampleComponent_01.vcproj  smartExampleComponent01.cc
Examples/Components/exampleComponent_02/: .cproject  .project  CMakeLists.txt  exampleComponent_02.vcproj  smartExampleComponent02.cc
Examples/Components/exampleComponent_10/: .cproject  .project  CMakeLists.txt  exampleComponent_10.vcproj  smartExampleComponent10.cc
Examples/Components/exampleComponent_101/: .cproject  .project  CMakeLists.txt  exampleComponent_101.vcproj  smartExampleComponent101.cc
Examples/Components/exampleComponent_102/: .cproject  .project  CMakeLists.txt  exampleComponent_102.vcproj  smartExampleComponent102.cc
Examples/Components/exampleComponent_103/: .cproject  .project  CMakeLists.txt  exampleComponent_103.vcproj  smartExampleComponent103.cc
Examples/Components/exampleComponent_104/: .cproject  .project  CMakeLists.txt  exampleComponent_104.vcproj  smartExampleComponent104.cc
Examples/Components/exampleComponent_11/: .cproject  .project  CMakeLists.txt  exampleComponent_11.vcproj  smartExampleComponent11.cc
Examples/Components/exampleComponent_20/: .cproject  .project  CMakeLists.txt  exampleComponent_20.vcproj  smartExampleComponent20.cc
Examples/Components/exampleComponent_21/: .cproject  .project  CMakeLists.txt  exampleComponent_21.vcproj  smartExampleComponent21.cc
Examples/Components/exampleComponent_22/: .cproject  .project  CMakeLists.txt  exampleComponent_22.vcproj  smartExampleComponent22.cc
Examples/Components/exampleComponent_40/: .cproject  .project  CMakeLists.txt  exampleComponent_40.vcproj  smartExampleComponent40.cc
Examples/Components/exampleComponent_41/: .cproject  .project  CMakeLists.txt  exampleComponent_41.vcproj  smartExampleComponent41.cc
Examples/Components/exampleComponent_50/: .cproject  .project  CMakeLists.txt  exampleComponent_50.vcproj  smartExampleComponent50.cc
Examples/Components/exampleComponent_51/: .cproject  .project  CMakeLists.txt  exampleComponent_51.vcproj  smartExampleComponent51.cc
Examples/Components/exampleMultipleComponents/: .cproject  .project  CMakeLists.txt  ClientComponent.cpp  ClientComponent.h  ClientTask.cpp  ClientTask.h  ServerComponent.cpp  ServerComponent.h  ServerTask.cpp  ServerTask.h  ShutdownManager.cpp  ShutdownManager.h  exampleMultipleComponents.vcproj  multi.cpp
Examples/Components/exampleShutdownClient/: .cproject  .project  CMakeLists.txt  client.cc  exampleShutdownClient.vcproj
Examples/Components/exampleShutdownServer/: .cproject  .project  CMakeLists.txt  exampleShutdownServer.vcproj  server.cc
GTests/: CMakeLists.txt  TestingEnvironmentACE.cpp  TestingEnvironmentACE.h  tests_main.cpp
GTests/CommTestObjectsACE/: Comm3dPoseACE.cpp  Comm3dPoseACE.h  CommTextACE.cpp  CommTextACE.h  CommTrajectoryACE.cpp  CommTrajectoryACE.h
NamingService/: CMakeLists.txt  ns_config.ini  showSmartSoftNamingService  startSmartSoftNamingService  stopSmartSoftNamingService
NamingService/NS-ClientTest/: .cproject  .project  CMakeLists.txt  NS-ClientTest.vcproj  main.cpp
NamingService/NS-Daemon/: .cproject  .project  CMakeLists.txt  NS-Daemon.vcproj  NameAcceptor.cpp  NameAcceptor.h  NameHandler.cpp  NameHandler.h  RemoteNSTask.cpp  RemoteNSTask.h  main.cpp  smartVersionHelper.hh
NamingService/NS-List/: CMakeLists.txt  main.cpp
(+338 files in other folders)
