CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(AceSmartSoftTests)

FIND_PACKAGE(SmartSoftTests QUIET PATHS $ENV{SMART_ROOT_ACE}/modules)

IF(SmartSoftTests_FOUND)
  FILE(GLOB SRCS ${PROJECT_SOURCE_DIR}/*.cpp)
  FILE(GLOB COMM_SRCS ${PROJECT_SOURCE_DIR}/CommTestObjectsACE/*.cpp)
  ADD_EXECUTABLE(${PROJECT_NAME} ${SRCS} ${COMM_SRCS})
  TARGET_LINK_LIBRARIES(${PROJECT_NAME} AceSmartSoftKernel SmartSoftTests)
  SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
      CXX_STANDARD 14
  )
ENDIF(SmartSoftTests_FOUND)
