CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(${PARENT_NAME}NamingService)

# set rpath in order to execute the NS-Daemon from everywhere
SET(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")

ADD_SUBDIRECTORY(NS-Daemon)
ADD_SUBDIRECTORY(NS-ClientTest)
ADD_SUBDIRECTORY(NS-List)

INSTALL(FILES 
  ${PROJECT_SOURCE_DIR}/showSmartSoftNamingService
  ${PROJECT_SOURCE_DIR}/startSmartSoftNamingService
  ${PROJECT_SOURCE_DIR}/stopSmartSoftNamingService 
  DESTINATION "${CMAKE_INSTALL_PREFIX}" 
  PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ)

