CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(ExampleComponents)

ADD_SUBDIRECTORY(exampleComponent_01)
ADD_SUBDIRECTORY(exampleComponent_02)
ADD_SUBDIRECTORY(exampleComponent_10)
ADD_SUBDIRECTORY(exampleComponent_101)
ADD_SUBDIRECTORY(exampleComponent_102)
ADD_SUBDIRECTORY(exampleComponent_103)
ADD_SUBDIRECTORY(exampleComponent_104)
ADD_SUBDIRECTORY(exampleComponent_11)
ADD_SUBDIRECTORY(exampleComponent_20)
ADD_SUBDIRECTORY(exampleComponent_21)
ADD_SUBDIRECTORY(exampleComponent_22)
ADD_SUBDIRECTORY(exampleComponent_40)
ADD_SUBDIRECTORY(exampleComponent_41)
ADD_SUBDIRECTORY(exampleComponent_50)
ADD_SUBDIRECTORY(exampleComponent_51)
#ADD_SUBDIRECTORY(exampleComponent_70)
#ADD_SUBDIRECTORY(exampleComponent_71)
#ADD_SUBDIRECTORY(exampleMultipleComponents)
ADD_SUBDIRECTORY(exampleShutdownClient)
ADD_SUBDIRECTORY(exampleShutdownServer)
